2007-01-22  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (switch_to_subscriptions): Rename
	to avoid recursion and conflict with the other function that
	actually changes the visibility of the subscription list.
	(insert_feed_into_list): Include a link to the monitor feed for a
	subscription.

2007-01-07  Doug Hellmann  <dhellmann@racemi.com>

	* templates/contact.html: Set thet able background color to
	prevent ugliness.

	* tools/mkcss.sh (ERROR): Add color symbol for error messages.

	* templates/two_columns.html: Move the status message above the
	content.

	* templates/base.html: Move the status message above the content.

	* static/js/oneoffcast/user.js (hide_subscriptions): New function
	to hide the subscription viewer and add form.
	(show_subscriptions): New function to show the subscription viewer
	and add form.
	(hide_feed_viewer): New function to hide the feed viewer node.
	(show_feed_viewer): New function to show the feed viewer node.

	* static/css/site_in.css: Add ERROR symbol for error message colors.

2006-12-17  Doug Hellmann  <dhellmann@racemi.com>

	* trace.py: Import the trace module from HappyDoc.

	* settings.py: Configure the trace module to write to the log file.

	* static/js/oneoffcast/user.js (do_add_to_queue): If we do not
	find an author name, send an empty string instead of "undefined".

2006-11-22  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Remove dead code.

	* static/images/opml-icon-16x16.png: Icon for OPML link.

2006-11-12  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Include date information in the
	queue and feed viewer.

	* static/css/site.css: Add styles for the date fields in the queue
	and feed contents viewer.

	* templates/base.html: Disable flash storage for dojo.

	* views.py: New module with views that are not strictly part of
	any app on the site.

	* urls.py (urlpatterns): Use site-wide views module for contacts
	page and the home page.