@@ -1,3 +1,8 @@
+2007-01-27  Doug Hellmann  <dhellmann@racemi.com>
+
+	* models.py (Podcast.Admin): Show the users who are subscribed to
+	the feed.
+
 2007-01-22  Doug Hellmann  <dhellmann@racemi.com>
 
 	* templates/user.html: Use the feed.png that matches the other
